# model_learning_old

./: .ycm_extra_conf.py  CMakeLists.txt  package.xml  wks.yml
apps/: model_learner.cpp  model_learning_analyzer.cpp
configs/: infered_poses_config.json  infered_poses_data_set_reader.json  optimization_model_learning_analyzer.json
configs/basic_models/: linear_model_learner.json
configs/humanoid_models/: poses_optimization_data_set_reader.json  poses_optimization_learner.json
doc/: calibration_model_experiments.org
include/rhoban_model_learning/: composite_model.h  composite_prior.h  data_set_reader.h  default_space.h  independent_gaussians_prior.h  model_learner.h  model_prior.h  model_space.h  predictor.h  uniform_prior.h
include/rhoban_model_learning/basic_models/: doubles_model.h  multi_poses_model.h  pose_2d_model.h  pose_rpy_model.h
include/rhoban_model_learning/camera_calibration/: camera_model.h  infered_poses_data_set_reader.h  infered_poses_model.h  infered_poses_predictor.h  marker_collection.h  marker_seen_collection.h
include/rhoban_model_learning/humanoid_models/: calibration_model.h  infered_poses_humanoid_input.h  infered_poses_humanoid_model.h  infered_poses_humanoid_predictor.h  infered_poses_model.h  infered_poses_predictor.h  pose_model.h  poses_optimization_data_set_reader.h  poses_optimization_input.h  poses_optimization_model.h  poses_optimization_predictor.h  rotation_model.h
include/rhoban_model_learning/log_models/: log_machine_data_set_reader.h  log_machine_input.h  log_machine_model.h  log_machine_predictor.h
include/rhoban_model_learning/tags/: aruco_cube.h  aruco_tag.h  tags_sheet.h
scripts/: create_aruco_tags.py  plot_graph.r  plot_vision_debug.py  plot_vision_debug.r
src/rhoban_model_learning/: composite_model.cpp  composite_prior.cpp  data_set_reader.cpp  data_set_reader_factory.cpp  default_space.cpp  deviation_based_space.cpp  independent_gaussians_prior.cpp  model_factory.cpp  model_learner.cpp  model_prior.cpp  model_prior_factory.cpp  model_space.cpp  model_space_factory.cpp  predictor.cpp  predictor_factory.cpp  sources.cmake  uniform_prior.cpp
src/rhoban_model_learning/basic_models/: doubles_model.cpp  multi_poses_model.cpp  pose_2d_model.cpp  pose_model.cpp  pose_rpy_model.cpp  sources.cmake
src/rhoban_model_learning/camera_calibration/: camera_model.cpp  infered_poses_data_set_reader.cpp  infered_poses_input.cpp  infered_poses_model.cpp  infered_poses_predictor.cpp  marker_collection.cpp  marker_seen_collection.cpp  sources.cmake
src/rhoban_model_learning/humanoid_models/: calibration_model.cpp  infered_poses_data_set_reader.cpp  infered_poses_humanoid_input.cpp  infered_poses_humanoid_model.cpp  infered_poses_humanoid_predictor.cpp  infered_poses_model.cpp  infered_poses_predictor.cpp  pose_model.cpp  poses_optimization_data_set_reader.cpp  poses_optimization_input.cpp  poses_optimization_model.cpp  poses_optimization_predictor.cpp  sources.cmake
src/rhoban_model_learning/log_models/: log_machine_data_set_reader.cpp  log_machine_input.cpp  log_machine_model.cpp  log_machine_predictor.cpp  sources.cmake
src/rhoban_model_learning/tags/: aruco_cube.cpp  aruco_tag.cpp  tags_sheet.cpp
tests/: composite_model.cpp
tests/basic_models/: pose_2d_model.cpp
tests/humanoid_models/: infered_poses_data_set_reader.cpp  pose_model.cpp
tests/ressources/humanoid_models/: infered_poses_data_set_reader.json  poses_optimization_data_set_reader.json
tests/ressources/tags/: aruco_cube_0.json  aruco_cube_1.json  pose_model_0.json  pose_model_1.json  sheet_1x1.json  sheet_2x3.json  sheet_2x3_rpy.json  sheet_3x2.json
tests/tags/: aruco_cube.cpp  aruco_tag.cpp  tags_sheet.cpp
tools/: aruco_extractor.cpp  aruco_extractor.py  log_machine_data_preparation.cpp  marker_board_extractor.cpp  marker_extractor.cpp  opencv_camera_calibration.cpp
